--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,9 +82,8 @@ jobs:
           sphinx-build -M html docs build/sphinx
         if: matrix.documentation
       - name: Upload documentation artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: documentation
           path: build/sphinx/html
         if: matrix.documentation
       #
@@ -127,8 +126,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          artifact_name: documentation
   #
   # Test Conda Python
   #
