Remove old block style and other deprecations (#183)
* remove old block style

* make linter happy

* remove import

* revert diagonal to function

* fix shifted diagonal

* update actions versions

* conda tests on macos

* more relaxed on ptlr pcm

* fix macos conda build :)

* docs build try out

* docs again

* deploy docs only on master

* cleanup, seed

* use correct action

* more removal

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,11 +21,11 @@ jobs:
           - {version: '3.9', os: ubuntu-latest, documentation: False}
           - {version: '3.11', os: macos-13 , documentation: False}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.version }}
-      - uses: actions/cache@v1
+      - uses: actions/cache@v4
         env:
           cache-name: cache-artifacts
         with:
@@ -72,21 +72,20 @@ jobs:
           python -m pytest adcc --allocator=libxm -k "TestFunctionality and h2o_sto3g"
       - name: Run C++ tests
         run: python setup.py cpptest -v
-      #
-      # TODO: sphinx.setup_command does not exist anymore,
-      # need to build docs differently
-      # - name: Dependencies for documentation
-      #   run: python -m pip install --user .[build_docs]
-      #   if: matrix.documentation
-      # - name: Build documentation
-      #   run: python setup.py build_docs
-      #   if: matrix.documentation
-      # - name: Upload documentation artefact
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: documentation
-      #     path: build/sphinx/html
-      #   if: matrix.documentation
+      # Documentation build
+      - name: Dependencies for documentation
+        run: python -m pip install --user .[build_docs]
+        if: matrix.documentation
+      - name: Build documentation
+        run: |
+          cd docs && doxygen && cd ..
+          sphinx-build -M html docs build/sphinx
+        if: matrix.documentation
+      - name: Upload documentation artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: build/sphinx/html
+        if: matrix.documentation
       #
       - name: Upload coverage to codecov
         run: |
@@ -109,6 +108,24 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: contains(matrix.os, 'ubuntu')
 
+  deploy_documentation:
+    name: Deploy Documentation to Github Pages
+    if: github.ref == 'refs/heads/master'
+    needs: test
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
   #
   # Test Conda Python
   #
@@ -119,16 +136,22 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {version: '3.9', os: ubuntu-latest, documentation: False}
+          - {version: '3.11', os: ubuntu-latest, documentation: False}
+          - {version: '3.11', os: macos-13 , documentation: False}
     defaults:
       run:
         shell: bash -l {0}
     steps:
-      - uses: actions/checkout@v2
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: actions/checkout@v4
+      - name: Patch compiler in Conda environment file
+        if: contains( matrix.os, 'macos')
+        run: |
+          sed -E -i.bak "s;gcc_linux-64;clang_osx-64;g" conda/environment.yml
+          sed -E -i.bak "s;gxx_linux-64;clangxx_osx-64;g" conda/environment.yml
+      - uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: adcc-dev
-          environment-file: conda/environment_dev_linux.yml
+          environment-file: conda/environment.yml
           miniforge-variant: Mambaforge
           use-mamba: true
           miniforge-version: latest
@@ -147,8 +170,9 @@ jobs:
         run: |
           conda info
           conda list
-          # NOTE: pcmsolver not 'linked' with Psi4 1.8
+          CXXFLAGS="$(echo $CXXFLAGS | sed 's/-fvisibility-inlines-hidden //g')"
           pip install .[tests] --user
+          # NOTE: pcmsolver not 'linked' with Psi4 1.8
           pytest adcc -k "not pcm"
           # python setup.py cpptest -v  # TODO: currently doesn't compile...
       #
@@ -178,8 +202,8 @@ jobs:
     name: Code style
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       - name: Install dependencies
