--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,10 +19,14 @@ jobs:
           sudo apt-get install libopenblas-base
           python -m pip install --user pyscf cppe wheel
           python -m pip install --user -r requirements.txt
-      - name: Run tests
-        run: python setup.py test
+      - name: Install package
+        run: |
+          python -m pip install --user .[tests]
+      - name: Run python tests
+        run: |
+          python -m pytest adcc
       - name: Build a source tarball
-        run: python setup.py sdist
+        run: python -m build --sdist
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
