revert sdist cmd

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,9 @@ jobs:
         run: |
           python -m pytest adcc
       - name: Build a source tarball
-        run: python -m build --sdist
+        # in the future...
+        # run: python -m build --sdist
+        run: python setup.py sdist
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
