--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,6 @@
 # Exclude test stuff
-global-exclude test_*.py
-exclude adcc/conftest.py
+exclude tests/*
 global-include libadcc/**/*.hh libadcc/**/*.cc
 include LICENSE
 include README.md
-include adcc/test_smoke.py
+include tests/smoke_test.py
