update config files

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ filterwarnings =
 	ignore:time.clock has been deprecated:DeprecationWarning
 	ignore:invalid escape sequence:DeprecationWarning
 testpaths =
-	tests
+	adcc/tests
