--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 # Exclude test stuff
-exclude tests/*
+exclude adcc/tests/**
+include adcc/tests/smoke_test.py
 global-include libadcc/**/*.hh libadcc/**/*.cc
 include LICENSE
 include README.md
-include tests/smoke_test.py
