--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,7 +24,7 @@ jobs:
           python -m pip install --user .[tests]
       - name: Run python tests
         run: |
-          python -m pytest adcc
+          python -m pytest
       - name: Build a source tarball
         # in the future...
         # run: python -m build --sdist
