--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.9'
       - name: Install dependencies
         run: |
-          sudo apt-get install libopenblas-base
+          sudo apt-get install libopenblas-dev
           python -m pip install --user pyscf cppe wheel
           python -m pip install --user -r requirements.txt
       - name: Install package
