--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
         if: contains( matrix.os, 'ubuntu')
       - name: Install system dependencies on macOS
         # coreutils for sha256sum for update_testdata.sh
-        run:  brew install ccache doxygen lcov coreutils
+        run:  brew install ccache doxygen lcov coreutils llvm
         if: contains( matrix.os, 'macos')
       #
       - name: Dump siteconfig with coverage flags for C++
@@ -146,8 +146,8 @@ jobs:
       - name: Patch compiler in Conda environment file
         if: contains( matrix.os, 'macos')
         run: |
-          sed -E -i.bak "s;gcc_linux-64;clang_osx-64;g" conda/environment.yml
-          sed -E -i.bak "s;gxx_linux-64;clangxx_osx-64;g" conda/environment.yml
+          sed -E -i.bak "s;gcc_linux-64;clang_osx-arm64;g" conda/environment.yml
+          sed -E -i.bak "s;gxx_linux-64;clangxx_osx-arm64;g" conda/environment.yml
       - uses: conda-incubator/setup-miniconda@v3
         with:
           activate-environment: adcc-dev
